v1.13.x/connectors/database/mssql.mdx
---
title: MSSQL Connector | OpenMetadata SQL Server Integration Guide
description: Connect your Microsoft SQL Server to OpenMetadata with our comprehensive MSSQL connector guide. Step-by-step setup, configuration, and metadata extraction.
sidebarTitle: Overview
---

import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import TestConnection from '/snippets/connectors/test-connection.mdx'
import IngestionScheduleAndDeploy from '/snippets/connectors/ingestion-schedule-and-deploy.mdx'
import ConfigureIngestion from '/snippets/connectors/database/configure-ingestion.mdx'
import AdvancedConfiguration from '/snippets/connectors/database/advanced-configuration.mdx'
import { MetadataIngestionUi } from '/snippets/components/MetadataIngestionUi.jsx'
import Related from '/snippets/v1.13.x/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/mssql.webp'
name="MSSQL"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "dbt", "Lineage", "Column-level Lineage", "Stored Procedures", "Sample Data", "Auto-Classification"]}
unavailableFeatures={["Owners", "Tags", "SSIS packages"]} />
In this section, we provide guides and references to use the MSSQL connector.
Configure and schedule MSSQL metadata and profiler workflows from the OpenMetadata UI:
- [Remote-Connection](#for-remote-connection)
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Query Usage](/v1.13.x/connectors/ingestion/workflows/usage)
- [Data Profiler](/v1.13.x/how-to-guides/data-quality-observability/profiler/profiler-workflow)
- [Data Quality](/v1.13.x/how-to-guides/data-quality-observability/quality)
- [Lineage](/v1.13.x/connectors/ingestion/lineage)
- [dbt Integration](/v1.13.x/connectors/database/dbt)
- [Troubleshooting](/v1.13.x/connectors/database/mssql/troubleshoot)

## Requirements
MSSQL User must grant `SELECT` privilege to fetch the metadata of tables and views.
```sql
-- Create a new user
-- More details https://learn.microsoft.com/en-us/sql/t-sql/statements/create-user-transact-sql?view=sql-server-ver16
CREATE USER Mary WITH PASSWORD = '********';
-- Grant SELECT on table
GRANT SELECT TO Mary;
```
### View Definitions

<Warning>
**View lineage requires** the `VIEW DEFINITION` (database-level) or `VIEW ANY DEFINITION` (server-level) permission. Without it, SQL Server returns each view's definition as `NULL` and raises no error, so views are ingested without their SQL and **no view lineage is created**. Table metadata is not affected.
</Warning>

```sql
-- Database-level: grant to the database user, in every database you ingest
GRANT VIEW DEFINITION TO Mary;
-- Or server-level: grant to the login (not the contained user) to cover all databases
GRANT VIEW ANY DEFINITION TO [login_name];
```
### Usage & Lineage consideration
To perform the query analysis for Usage and Lineage computation, the connector reads query history from SQL Server's [Query Store](https://learn.microsoft.com/en-us/sql/relational-databases/performance/monitoring-performance-by-using-the-query-store) when it is enabled on a database. Query Store exposes this history through `sys.query_store_query`, `sys.query_store_query_text`, `sys.query_store_plan`, and `sys.query_store_runtime_stats`. Query Store keeps a durable, on-disk record of executed queries. The plan-cache Dynamic Management Views (DMVs) (`sys.dm_exec_cached_plans`, `sys.dm_exec_query_stats`, and `sys.dm_exec_sql_text`) are evicted on server restart, memory pressure, or plan recompilation, and can silently return incomplete history.

Query Store is auto-detected per database. No configuration is needed. When `ingestAllDatabases` is enabled, each database is read from its own best source independently: databases with Query Store use it, and the rest fall back to the plan-cache DMVs, so one database without Query Store never downgrades the others.

<Tip>
**Tip:** Enable Query Store on the databases you ingest, for reliable and durable Usage and Lineage history.
</Tip>

To check whether Query Store is enabled on a database, and how it is currently operating:
```sql
SELECT actual_state_desc, query_capture_mode_desc, size_based_cleanup_mode_desc
FROM sys.database_query_store_options;
```
To enable it:
```sql
ALTER DATABASE [YourDatabase] SET QUERY_STORE = ON
(
    QUERY_CAPTURE_MODE = ALL,
    CLEANUP_POLICY = ( STALE_QUERY_THRESHOLD_DAYS = 30 )
);
```
The default `QUERY_CAPTURE_MODE` on SQL Server 2019 and later is `AUTO`, which can skip queries that only run a few times, such as a one-off data migration statement. Setting it to `ALL` ensures every query is captured for lineage. Set `STALE_QUERY_THRESHOLD_DAYS` to cover at least your ingestion lookback window, so queries are not purged before they are read. Query Store's default `SIZE_BASED_CLEANUP_MODE` purges the oldest queries to stay within `MAX_STORAGE_SIZE_MB`, which reduces the risk of Query Store switching to read-only. Under heavy write load, cleanup can still fall behind, and Query Store can switch to read-only temporarily until it catches up.

<Warning>
Query Store needs two permissions together. The database-level grant below lets `sys.database_query_store_options` and Query Store's other metadata views succeed, but the query text comes from `sys.query_store_query_text`, which needs the server-level grant. Without the server-level grant, usage and lineage queries can run without error while returning no query text.
</Warning>

Database-level, for Query Store metadata: `VIEW DATABASE STATE` (SQL Server 2016-2019) or `VIEW DATABASE PERFORMANCE STATE` (SQL Server 2022 and later).
```sql
GRANT VIEW DATABASE STATE TO YourUser;
-- SQL Server 2022 and later: GRANT VIEW DATABASE PERFORMANCE STATE TO YourUser;
```
Server-level, for the query text and the plan-cache DMV fallback: `VIEW SERVER STATE` (SQL Server 2019 and earlier) or `VIEW SERVER PERFORMANCE STATE` (SQL Server 2022 and later).
```sql
GRANT VIEW SERVER STATE TO YourUser;
-- SQL Server 2022 and later: GRANT VIEW SERVER PERFORMANCE STATE TO YourUser;
```
Exact grant names and tiers can differ on Azure SQL Database and Azure SQL Managed Instance. Check `sys.database_query_store_options` and the [Microsoft documentation](https://learn.microsoft.com/en-us/sql/relational-databases/system-catalog-views/sys-query-store-query-text-transact-sql) for your instance.

### Synonyms

SQL Server synonyms are ingested as an alternate name on the table or view they point to, not as separate entities. Enable **Include Synonyms** in the connection config to turn this on — it's off by default. OpenMetadata then sweeps `sys.synonyms` across every in-scope database before ingesting tables, so a synonym that points to a table in a different database resolves correctly, as long as both databases are in scope.

- The canonical table's page shows a read-only **Aliases** widget listing each synonym that points to it. Tables with no synonyms don't show the widget.
- Aliases are searchable, and lineage from a query or view that references the synonym's name attaches to the canonical table. The synonym itself never appears as its own entity or lineage node.
- A synonym pointing to an object that doesn't exist, or to a linked server (a four-part name), is reported as unresolved in the ingestion pipeline status instead of being silently dropped.
- Dropping or retargeting a synonym at the source updates the alias list on the next ingestion run.

### For Remote Connection
#### 1. SQL Server running
Make sure the SQL server that you are trying to connect is in running state.
#### 2. Allow remote connection on MSSMS(Microsoft SQL Server Management Studio)
This step allow the sql server to accept remote connection request.
<img src="/public/images/connectors/mssql/remote-connection.png" alt="Remote Connection" />
#### 3. Configure Windows Firewall
If you are using SQL server on windows, you must configure the firewall on the computer running SQL Server to allow access.
**Step 1**: On the Start menu, select Run, type WF.msc, and then select OK.
**Step 2**: In the Windows Firewall with Advanced Security, in the left pane, right-click Inbound Rules, and then select New Rule in the action pane.
**Step 3**: In the Rule Type dialog box, select Port, and then select Next.
**Step 4**: In the Protocol and Ports dialog box, select TCP. Select Specific local ports, and then type the port number of the instance of the Database Engine, such as 1433 for the default instance. Select Next.
**Step 5**: In the Action dialog box, select Allow the connection, and then select Next.
**Step 6**: In the Profile dialog box, select any profiles that describe the computer connection environment when you want to connect to the Database Engine, and then select Next.
**Step 7**: In the Name dialog box, type a name and description for this rule, and then select Finish.
For details step please refer to this [link](https://docs.microsoft.com/en-us/sql/database-engine/configure-windows/configure-a-windows-firewall-for-database-engine-access?view=sql-server-ver15).
## Metadata Ingestion
<MetadataIngestionUi connector={"MSSQL"} selectServicePath={"/public/images/connectors/mssql/select-service.png"} addNewServicePath={"/public/images/connectors/mssql/add-new-service.png"} serviceConnectionPath={"/public/images/connectors/mssql/service-connection.png"} />
# Connection Details
<Steps>
<Step title="Connection Details">
<Tip>
When using a **Hybrid Ingestion Runner**, any sensitive credential fields—such as passwords, API keys, or private keys—must reference secrets using the following format:
```
password: secret:/my/database/password
```
This applies **only to fields marked as secrets** in the connection form (these typically mask input and show a visibility toggle icon).
For a complete guide on managing secrets in hybrid setups, see the [Hybrid Ingestion Runner Secret Management Guide](https://docs.getcollate.io/getting-started/day-1/hybrid-saas/hybrid-ingestion-runner#3.-manage-secrets-securely).
</Tip>
- **Connection Scheme**: Defines how to connect to MSSQL. We support `mssql+pytds`, `mssql+pyodbc`, and `mssql+pymssql`. (If you are using windows authentication from a linux deployment please use pymssql)
- **Username**: Specify the User to connect to MSSQL. It should have enough privileges to read all the metadata.
- **Password**: Password to connect to MSSQL.
- **Host and Port**: Enter the fully qualified hostname and port number for your MSSQL deployment in the Host and Port field.
- **URI String**: In case of a `pyodbc` connection.
- **Database**: The initial database to establish a connection to the data source.
- **Ingest All Databases**: If you need to ingest multiple databases - aside from the initial one above - you can enable this option.
</Step>
<AdvancedConfiguration />
<TestConnection />
<ConfigureIngestion />
<IngestionScheduleAndDeploy />
</Steps>

<Related />
